[package]
name = "cuid"
version = "1.0.2"
license = "MIT"
edition = "2018"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
description = "An ipmlementation of CUID protocol in rust"
documentation = "https://docs.rs/cuid/latest/cuid/"
homepage = "https://github.com/mplanchard/cuid-rust"
repository = "https://github.com/mplanchard/cuid-rust"

[dev-dependencies]
criterion = "~0.3"

[dependencies]
hostname = "~0.3.0"
lazy_static = "~1.4"
rand = "~0.8.0"

[lib]
name = "cuid"
path = "src/lib.rs"

[[bin]]
name = "cuid"
path = "src/bin.rs"

[[bench]]
name = "cuid"
harness = false
