[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [ "Matthew Planchard <msplanchard@gmail.com>" ]
license = "MIT"
homepage = "https://github.com/mplanchard/cuid-rust"
repository = "https://github.com/mplanchard/cuid-rust"

[workspace.dependencies]
cuid-util = { path = "./crates/cuid-util", version = "0.1.1" }
cuid1 = { path = "./crates/cuid1", version = "0.1.0" }
cuid2 = { path = "./crates/cuid2", version = "0.1.3" }
criterion = "0.5.0"
paste = "1.0.15"
proptest = "1.0.0"
rand = "0.8"
wasm-bindgen-test = "0.3.0"
