[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [ "Matthew Planchard <msplanchard@gmail.com>" ]
license = "MIT"
homepage = "https://github.com/mplanchard/cuid-rust"
repository = "https://github.com/mplanchard/cuid-rust"

[workspace.dependencies]
cuid-util = { path = "./crates/cuid-util", version = "0.1.1" }
cuid1 = { path = "./crates/cuid1", version = "0.1.0" }
cuid2 = { path = "./crates/cuid2", version = "0.1.3" }
criterion = "0.5.0"
hostname = "0.4.2"
num = { version = "0.4.0", features = ["num-bigint"] }
paste = "1.0.15"
proptest = "1.0.0"
radix_fmt = "1.0.0"
rand = "0.10.1"
sha3 = "0.11.0"
uuid = "1.10.0"
wasm-bindgen-test = "0.3.68"
