[package]
name = "cuid-util"
version = "0.1.0"
description = "Shared utilities for the cuid and cuid2 crates"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
num = { version = "0.4.0", features = ["num-bigint"] }
proptest = "1.0.0"
# Our radix function is faster than this one, but we can use it to check our output
radix_fmt = "1.0.0"
