[package]
name = "cuid-util"
version = "0.1.1"
description = "Shared utilities for the cuid and cuid2 crates"
resolver = "2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
num = { version = "0.4.0", features = ["num-bigint"] }
proptest.workspace = true
# Our radix function is faster than this one, but we can use it to check our output
radix_fmt = "1.0.0"
