[package]
name = "cuid-util"
# Don't forget to update in workspace Cargo.toml also
version = "0.1.1"
description = "Shared utilities for the cuid and cuid2 crates"
resolver = "2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
num.workspace = true
proptest.workspace = true
# Our radix function is faster than this one, but we can use it to check our output
radix_fmt.workspace = true
