[package]
name = "cuid"
version = "1.3.3"
description = "An ipmlementation of CUID protocol in rust"
documentation = "https://docs.rs/cuid/latest/cuid/"
resolver = "2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base36 = "0.0.1"
cuid1.workspace = true
cuid2.workspace = true
num = { version = "0.4.0", features = ["num-bigint"] }
once_cell = "1.19.0"
rand.workspace = true

[dev-dependencies]
criterion.workspace = true


[lib]
name = "cuid"
path = "src/lib.rs"

[[bin]]
name = "cuid"
path = "src/bin.rs"
