[package]
name = "cuid"
version = "2.0.0"
description = "An ipmlementation of CUID protocol in rust"
documentation = "https://docs.rs/cuid/latest/cuid/"
resolver = "2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cuid1 = { workspace = true, optional = true }
cuid2 = { workspace = true, optional = true }

[dev-dependencies]
paste.workspace = true
wasm-bindgen-test.workspace = true

[lib]
name = "cuid"
path = "src/lib.rs"

[[bin]]
name = "cuid"
path = "src/bin.rs"

[features]
default = ["v1", "v2"]
v1 = ["dep:cuid1"]
v2 = ["dep:cuid2"]
