[package]
name = "cuid1"
version = "0.1.0"
description = "An implementation of the CUID protocol in rust"
documentation = "https://docs.rs/cuid/latest/cuid1/"
resolver = "2"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cuid1"
path = "src/lib.rs"

[[bin]]
name = "cuid1"
path = "src/bin.rs"

[[bench]]
name = "cuid1"
harness = false

[dependencies]
cuid-util.workspace = true
num.workspace = true
rand.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
paste.workspace = true
wasm-bindgen-test.workspace = true

# Not WASM deps
[target.'cfg(not(target_family = "wasm"))'.dependencies]
hostname.workspace = true

# WASM deps
[target.'cfg(target_family = "wasm")'.dependencies]
# This isn't a direct dependency, but we need to ensure the feature
# is enabled for webassembly builds to work.
getrandom = { workspace = true, features = ["wasm_js"] }
web-time.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion.workspace = true
