[package]
name = "cuid2"
version = "0.1.3"
description = "An implementation of the CUID2 protocol in rust"
documentation = "https://docs.rs/cuid/latest/cuid2/"
resolver = "2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cuid2"
path = "src/lib.rs"

[[bin]]
name = "cuid2"
path = "src/bin.rs"

[[bench]]
name = "cuid2"
harness = false

[dependencies]
cuid-util.workspace = true
num = { version = "0.4.0", features = ["num-bigint"] }
rand.workspace = true
sha3 = "0.10.6"

[dev-dependencies]
paste.workspace = true
radix_fmt = "1.0.0"
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion.workspace = true
num_cpus = "1.15.0"
proptest.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
# Just specified so we can add a feature when the js feature is enabled.
# This works fine on wasm targets other than unknown-unknown
getrandom = { version = "0", features = ["js"] }
web-time = "1.1.0"
